@@ -71,6 +71,11 @@ command to generate the output files.
   <mime-type type="application/mathematica">
     <comment xml:lang="en">Mathematica Notebook</comment>
     <glob pattern="*.nb" />
+    <magic priority="50">
+      <match value="(*******" type="string" offset="0">
+        <match value="Mathematica-Compatible Notebook" type="string" offset="0:256" />
+      </match>
+    </magic>
   </mime-type>
   <mime-type type="application/octet-stream">
     <_comment>unknown</_comment>
