@@ -1,5 +1,11 @@
 2005-04-16  Christophe Fergeau  <teuf@gnome.org>
 
+	* freedesktop.org.xml.in: added magic for mathematica notebooks
+	* freedesktop.org.xml:
+	* po/Makefile.in.in: updated autogenerated files
+
+2005-04-16  Christophe Fergeau  <teuf@gnome.org>
+
 	* .cvsignore:
 	* freedesktop.org.xml.in: use application/xslt+xml for xslt
 	stylesheets, maybe it will need to be changed to text/xml or
